Changes to favicon

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             scroll-behavior: smooth;
         }
     </style>
-    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
 </head>
 <body class="min-h-screen bg-slate-950 text-slate-300 font-sans">
 
