--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
 
             <h1 class="text-5xl sm:text-6xl lg:text-7xl font-bold text-white mb-6 leading-tight">
-                Building Scalable,
+                Building Scalable,<br/>
                 <span class="bg-gradient-to-r from-blue-500 to-blue-600 bg-clip-text text-transparent">
                         Data-Powered Systems
                     </span>
@@ -137,8 +137,8 @@
             </h1>
 
             <p class="text-xl sm:text-2xl text-slate-300 mb-12 max-w-4xl mx-auto leading-relaxed">
-                MV.tech designs and manages modern data platforms—ETL pipelines, cloud architectures,
-                and analytics systems—so businesses can trust their data.
+                MV.tech designs and manages modern data platforms – ETL pipelines, cloud architectures,
+                and analytics systems – so businesses can trust their data.
             </p>
 
             <div class="flex flex-col sm:flex-row justify-center gap-4 sm:gap-6">
@@ -362,7 +362,7 @@
         </div>
 
         <!-- TOOLS & TECHNOLOGIES – SOLID CARDS + GRADIENT BORDERS -->
-        <section class="py-20 bg-slate-950">
+        <section class="py-20 bg-slate-800/50 backdrop-blur-sm rounded-xl border border-slate-700 hover:border-blue-500 transition-all">
             <div class="max-w-7xl mx-auto px-6">
 
                 <!-- Section Header -->
