Updated the page

--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
                 </p>
 
                 <div class="flex flex-col sm:flex-row justify-center gap-6 mb-10">
-                    <a href="mailto:meet.vaghasia27@gmail.com"
+                    <a href="mailto:contact@mvtech.solutions"
                        class="group inline-flex items-center justify-center px-8 py-4 bg-blue-600 text-white text-lg font-semibold rounded-lg hover:bg-blue-700 transition-all shadow-xl shadow-blue-600/30">
                         <i data-lucide="mail" class="mr-2 w-5 h-5"></i>
                         Get in Touch
@@ -844,7 +844,7 @@
                     data infrastructure that drives real business decisions.
                 </p>
                 <div class="flex gap-4">
-                    <a href="mailto:meet.vaghasia27@gmail.com"
+                    <a href="mailto:contact@mvtech.solutions"
                        class="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center hover:bg-blue-600 transition-colors"
                        aria-label="Email">
                         <i data-lucide="mail" class="text-slate-300 w-4 h-4"></i>
