--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                         <i data-lucide="arrow-right"
                            class="ml-2 w-5 h-5 group-hover:translate-x-1 transition-transform"></i>
                     </a>
-                    <a href="https://calendly.com/meetvaghasia27/new-meeting?month=2026-01" target="_blank"
+                    <a href="https://calendly.com/mvtech/new-meeting" target="_blank"
                        class="inline-flex items-center justify-center px-8 py-4 bg-slate-800 text-white text-lg font-semibold rounded-lg border border-blue-500 hover:bg-slate-700 transition-all">
                         <i data-lucide="calendar" class="mr-2 w-5 h-5"></i>
                         Schedule a Consultation
