Added Html tag for verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="jHv9z-tx17troA76X9oZKxtdUyA2kZ3ucxekWu2IKNo" />
     <title>MV.tech Data Solutions</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
